--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Gurkirat Kaur">
     <title>Gurkirat Kaur</title>
     <link rel="stylesheet" href="style.css">
     <script defer src = "script.js"></script>
@@ -10,22 +11,24 @@
 <body>
     <header>
        <nav>
-        <label class="nav-label">Gurkirat Kaur</label>
+        <label class="nav-label"><a href="#">Gurkirat Kaur</a></label>
         <ul class="navbar">
             <li>
-                <a class="nav-items" href="#">Home</a>
+                <a class="nav-items" href="#" data-hover="Home">Home</a>
             </li>
             <li>
-                <a class="nav-items" href="#">Projects</a>
+                <a class="nav-items" href="#" data-hover="Projects">Projects</a>
             </li>
             <li>
-                <a class="nav-items" href="#">Contact</a>
+                <a class="nav-items" href="#" data-hover="Contact">Contact</a>
             </li>
         </ul>
        </nav>
     </header>
     <main>
-        
+        <div class="background-box1">
+            <div class="background-box2"></div>
+        </div>
     </main>
     <footer>
 
