--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     </header>
     <main>
         <div class="background-box1">
-            <div class="background-box2"></div>
+            <div class="background-box2">
+                <img src="img/headshot.jpg" class="headshot">
+                <h6>Gurkirat Kaur</h6>
+                <h2>Information Technology</h2>
+                <img src="img/linkedin.png" class="linkedin-icon">
+                <img src="img/github.png" class="github-icon">
+            </div>
         </div>
     </main>
     <footer>
