--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src = "script.js"></script>
 </head>
 <body>
-    <header>
+    <header class="header">
        <nav>
         <label class="nav-label"><a href="#">Gurkirat Kaur</a></label>
         <ul class="navbar">
@@ -24,6 +24,16 @@
             </li>
         </ul>
        </nav>
+       <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        <ul class="mobile-menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+    </div>
     </header>
     <main>
         <div class="background-box1">
