--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
           </ul>
     </div>
     </header>
-    <main>
-        <div class="background-box1">
-            <div class="background-box2">
-                <img src="img/headshot.jpg" class="headshot">
-                <h6>Gurkirat Kaur</h6>
-                <h2>Information Technology</h2>
-                <img src="img/linkedin.png" class="linkedin-icon">
-                <img src="img/github.png" class="github-icon">
-            </div>
+    <main class="container">
+        <div class="background-box1"></div>
+        <div class="background-box2"></div>
+        <div class="strip"></div>
+        <div class="headshot"><img src="img/headshot.jpg" class="headshot-img"></div>
+        <div class="name">
+            <h6>Gurkirat Kaur</h6>
         </div>
+        <div class="it">
+            <h2>Information Technology</h2>
+        </div>
+        <div class="linkedin-icon"><img src="img/linkedin.png" class="icons"></div>
+        <div class="github-icon"><img src="img/github.png" class="icons"></div> 
     </main>
     <footer>
 
