--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <header class="header">
        <nav>
-        <label class="nav-label"><a href="#">Gurkirat Kaur</a></label>
+        <label class="nav-label"><a href="index.html">Gurkirat Kaur</a></label>
         <ul class="navbar">
             <li>
-                <a class="nav-items" href="#" data-hover="Home">Home</a>
+                <a class="nav-items" href="index.html" data-hover="Home">Home</a>
             </li>
             <li>
                 <a class="nav-items" href="#" data-hover="Projects">Projects</a>
@@ -29,7 +29,7 @@
         <div class="bar2"></div>
         <div class="bar3"></div>
         <ul class="mobile-menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -38,19 +38,17 @@
     <main class="container">
         <div class="background-box1"></div>
         <div class="background-box2"></div>
-        <div class="strip"></div>
         <div class="headshot"><img src="img/headshot.jpg" class="headshot-img"></div>
-        <div class="name">
-            <h6>Gurkirat Kaur</h6>
-        </div>
-        <div class="it">
-            <h2>Information Technology</h2>
-        </div>
-        <div class="linkedin-icon"><img src="img/linkedin.png" class="icons"></div>
-        <div class="github-icon"><img src="img/github.png" class="icons"></div> 
+        <div class="name">Gurkirat Kaur</div>
+        <div class="it">Information Technology</div>
+        <div class="linkedin-icon"><a href="https://www.linkedin.com/in/gurkiratkaur278"><img src="img/linkedin.png" class="icons"></a></div>
+        <div class="github-icon"><a href="https://github.com/GKN-Tech"><img src="img/github.png" class="icons"></a></div> 
+        <div class="hello">Hello World!</div>
+        <div class="resume"><a href="files/GurkiratKaur_Resume.pdf" download><button class="btn">Download Resume</button></a></div>
+        <div class="summary">I am an ambitious and driven Information Technology student at Kwantlen Polytechnic University. Proficient in troubleshooting, networking, and system administration, with hands-on experience in various IT projects and a deep understanding of emerging industry trends. Adept at collaborating in cross-functional teams and providing exceptional customer support. </div>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div><a class="contact-links" href = "mailto:gurkiratkaurn.02@gmail.com">gurkiratkaurn.02@gmail.com</a> | <a class="contact-links" href=”callto:+91123-456-7890″>604-727-0278</a></div>
     </footer>
 </body>
 </html>
